--- a/t24-outbound-connector/pom.xml
+++ b/t24-outbound-connector/pom.xml
@@ -57,6 +57,12 @@
 		      <groupId>com.temenos.technology.integrationframework</groupId>
 		      <artifactId>t24-adapter-common</artifactId>
 		      <version>DEV.0.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-lang3</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		    
 		<!-- TEMENOS TAFJ SUPPORT -->
@@ -132,6 +138,12 @@
 			<groupId>com.temenos.technology.integrationframework</groupId>
 			<artifactId>t24-ofs</artifactId>
 			<version>DEV.0.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-lang3</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<!-- XSTREAM - XML BUILDER -->
@@ -176,7 +188,7 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-	    
+
     </dependencies>
     
     <build>
