Extracted the version out in a property

--- a/t24-inbound-connector/pom.xml
+++ b/t24-inbound-connector/pom.xml
@@ -132,7 +132,7 @@
 		<dependency>
 			<groupId>com.temenos.technology</groupId>
 			<artifactId>tocfT24ra</artifactId>
-			<version>201702.0.0</version>
+			<version>${t24.version}</version>
 		</dependency>
 		
 	</dependencies>
