--- a/t24-outbound-connector/pom.xml
+++ b/t24-outbound-connector/pom.xml
@@ -81,11 +81,11 @@
 			<version>1.2.16</version>
 		</dependency>
 		 
-		<!-- JBOSS CLIENT -->   	    
+		<!-- JBOSS CLIENT -->
 		<dependency>
-		    <groupId>org.jboss</groupId>
-            <artifactId>jboss-client</artifactId>
-            <version>7.2.0</version>
+			<groupId>org.jboss.client</groupId>
+			<artifactId>jboss-client</artifactId>
+			<version>7.0.0.GA-redhat-2</version>
 		</dependency>
 		
 		<!-- TEMENOS EJB SUPPORT -->   	  
